homework-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework1
spec:
  selector:
    app: homework1
  ports:
    - protocol: TCP
      port: 8000
